--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "learn-ts",
   "version": "1.0.0",
-  "description": "",
+  "description": "Learn TypeScript",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -16,5 +16,10 @@
   "bugs": {
     "url": "https://github.com/vartanovs/learn-ts/issues"
   },
-  "homepage": "https://github.com/vartanovs/learn-ts#readme"
+  "homepage": "https://github.com/vartanovs/learn-ts#readme",
+  "devDependencies": {
+    "eslint": "6.8.0",
+    "eslint-config-vartanovs-ts": "0.4.0",
+    "typescript": "3.7.4"
+  }
 }
