--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,9 @@
 name: Pull Request Workflow
 
-on: pull_request
-    branches:
-        - master
+on:
+    pull_request:
+        branches:
+            - master
 
 jobs:
     build:
