--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,5 +10,8 @@ jobs:
         name: Lint
         runs-on: ubuntu-latest
         steps:
+            - uses: actions/checkout@v2
+            - run: node -v
+            - run: git branch
             - run: npm install
             - run: npm run test:lint
