--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Pull Request Workflow
+name: PR Workflow
 
 on:
     pull_request:
@@ -11,7 +11,6 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v2
-            - run: node -v
-            - run: git branch
             - run: npm install
-            - run: npm run test:lint
+            - run: ls -a
+            - run: npm run test:unit
