lint and test jobs

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,8 +6,16 @@ on:
             - master
 
 jobs:
-    build:
+    lint:
         name: Lint
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v2
+            - run: npm install
+            - run: ls -a
+            - run: npm run test:lint
+    unit_test:
+        name: Unit Test
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v2
