add compilation test

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,13 @@ on:
             - master
 
 jobs:
+    compile:
+        name: Compile
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v2
+            - run: npm install
+            - run: npm run test:compile
     lint:
         name: Lint
         runs-on: ubuntu-latest
