Add GitHub CI Action for Linting (#1)
* compilation check, linting and unit test scripts
* github actions workflow confirms all three scripts pass before pr can be merged

--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Learn TypeScript",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "npm run test:compile && npm run test:lint && npm run test:unit",
+    "test:compile": "tsc --noEmit",
+    "test:lint": "eslint src/**/*.ts",
+    "test:unit": "jest"
   },
   "repository": {
     "type": "git",
