--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/jest": "24.0.25",
     "eslint": "6.8.0",
     "eslint-config-vartanovs-ts": "0.4.0",
+    "eslint-plugin-react": "7.18.3",
     "jest": "24.9.0",
     "ts-jest": "24.2.0",
     "typescript": "3.7.4"
