--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,7 @@
       "target": "es6",                            // Target ES2015 during compilation
       "tsBuildInfoFile": ".cache/.tsbuildinfo",   // Target file for incremental build information
   
-      // "jsx": "react",                             // Support JSX in .tsx files
+      "jsx": "react",                             // Support JSX in .tsx files
   
       "alwaysStrict": true,                       // Emit "use Strict" for each source file
       "esModuleInterop": true,                    // Enable implicit default imports/exports
