--- a/package.json
+++ b/package.json
@@ -27,13 +27,49 @@
     "url": "https://github.com/vartanovs/learn-ts/issues"
   },
   "homepage": "https://github.com/vartanovs/learn-ts#readme",
+  "dependencies": {
+    "deep-freeze": "0.0.1",
+    "expect": "24.9.0",
+    "lodash": "4.17.15",
+    "normalizr": "3.4.1",
+    "prop-types": "15.7.2",
+    "react": "16.12.0",
+    "react-dom": "16.12.0",
+    "react-redux": "7.1.3",
+    "react-router": "5.1.2",
+    "react-router-dom": "5.1.2",
+    "redux": "4.0.5",
+    "redux-logger": "3.0.6",
+    "redux-thunk": "2.3.0",
+    "uuid": "3.4.0"
+  },
   "devDependencies": {
+    "@babel/core": "7.8.4",
+    "@babel/preset-env": "7.8.4",
+    "@babel/preset-react": "7.8.3",
+    "@babel/preset-typescript": "7.8.3",
+    "@types/deep-freeze": "0.1.2",
     "@types/jest": "24.0.25",
+    "@types/lodash": "4.14.149",
+    "@types/node": "13.7.1",
+    "@types/react": "16.9.19",
+    "@types/react-dom": "16.9.5",
+    "@types/react-redux": "7.1.7",
+    "@types/react-router": "5.1.4",
+    "@types/react-router-dom": "5.1.3",
+    "@types/redux-logger": "3.0.7",
+    "@types/uuid": "3.4.7",
+    "babel-loader": "8.0.6",
     "eslint": "6.8.0",
     "eslint-config-vartanovs-ts": "0.4.0",
     "eslint-plugin-react": "7.18.3",
+    "html-loader": "0.5.5",
+    "html-webpack-plugin": "3.2.0",
     "jest": "24.9.0",
     "ts-jest": "24.2.0",
-    "typescript": "3.7.4"
+    "typescript": "3.7.5",
+    "webpack": "4.41.5",
+    "webpack-cli": "3.3.10",
+    "webpack-dev-server": "3.10.3"
   }
 }
