frontend masters react course setup

--- a/src/react/fe-masters/.eslintrc.json
+++ b/src/react/fe-masters/.eslintrc.json
@@ -8,7 +8,7 @@
     "prettier/react"
   ],
   "plugins": [
-    "react", "import", "jsx-a11y"
+    "react", "import", "jsx-a11y", "react-hooks"
   ],
   "parserOptions": {
     "ecmaVersion": 2018,
@@ -19,7 +19,9 @@
   },
   "rules": {
     "no-console": 1,
-    "react/prop-types": 0
+    "react/prop-types": 0,
+    "react-hooks/exhaustive-deps": 1,
+    "react-hooks/rules-of-hooks": 2
   },
   "env": {
     "browser": true,
