--- a/package.json
+++ b/package.json
@@ -28,11 +28,14 @@
   },
   "homepage": "https://github.com/vartanovs/learn-ts#readme",
   "dependencies": {
+    "@emotion/core": "10.0.27",
+    "@frontendmasters/pet": "1.0.3",
     "deep-freeze": "0.0.1",
     "expect": "24.9.0",
     "lodash": "4.17.15",
     "normalizr": "3.4.1",
     "prop-types": "15.7.2",
+    "@reach/router": "1.3.1",
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "react-redux": "7.1.3",
@@ -48,26 +51,37 @@
     "@babel/preset-env": "7.8.4",
     "@babel/preset-react": "7.8.3",
     "@babel/preset-typescript": "7.8.3",
+    "@testing-library/react": "9.4.1",
     "@types/deep-freeze": "0.1.2",
-    "@types/jest": "24.0.25",
+    "@types/jest": "25.1.3",
     "@types/lodash": "4.14.149",
     "@types/node": "13.7.1",
+    "@types/reach__router": "1.3.0",
     "@types/react": "16.9.19",
     "@types/react-dom": "16.9.5",
     "@types/react-redux": "7.1.7",
     "@types/react-router": "5.1.4",
     "@types/react-router-dom": "5.1.3",
     "@types/redux-logger": "3.0.7",
+    "@types/testing-library__react": "9.1.2",
     "@types/uuid": "3.4.7",
+    "babel-eslint": "10.0.3",
     "babel-loader": "8.0.6",
+    "cross-env": "7.0.0",
     "eslint": "6.8.0",
+    "eslint-config-prettier": "6.10.0",
     "eslint-config-vartanovs-ts": "0.4.0",
+    "eslint-plugin-import": "2.20.1",
+    "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-react": "7.18.3",
+    "eslint-plugin-react-hooks": "2.4.0",
     "html-loader": "0.5.5",
     "html-webpack-plugin": "3.2.0",
-    "jest": "24.9.0",
-    "ts-jest": "24.2.0",
-    "typescript": "3.7.5",
+    "jest": "25.1.0",
+    "parcel-bundler": "1.12.4",
+    "prettier": "1.19.1",
+    "ts-jest": "25.2.1",
+    "typescript": "3.8.2",
     "webpack": "4.41.5",
     "webpack-cli": "3.3.10",
     "webpack-dev-server": "3.10.3"
